still working on styling

--- a/job-finder-frontend/index.html
+++ b/job-finder-frontend/index.html
@@ -21,19 +21,19 @@
           src="https://upload.wikimedia.org/wikipedia/commons/6/61/FS_wiki.png"
         />
         <h2>Job Search Tracker</h2>
+        <h3 id="username">Hello</h3>
+        <h4 id="status">Status</h4>
         <div>
           <button id="application-btn">New Job Application</button>
         </div>
         <div id="myModal" class="modal">
           <div class="modal-content">
             <span class="close">&times;</span>
+            <h4>Add a new job application to your job search tracker</h4>
             <form id="new-application-form">
-              <label>
-                Add a new job application to your job search tracker</label
-              >
               <!-- <label> Only job title and company are required </label> -->
 
-              <br />
+              <!-- <br /> -->
               <!-- <label for="job-title"> Job Title * </label>-->
               <input
                 type="text"
@@ -70,6 +70,7 @@
             </form>
           </div>
         </div>
+        <br />
       </div>
       <!-- Add our HTML -->
 
