--- a/job-finder-frontend/index.html
+++ b/job-finder-frontend/index.html
@@ -8,11 +8,11 @@
       href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
       rel="stylesheet"
     />
+    <script defer src="./src/index.js"></script>
+    <script defer src="./src/user.js"></script>
   </head>
   <body>
-    <header>
-      <script defer src="./src/index.js"></script>
-    </header>
+    <header></header>
 
     <main>
       <div class="page-banner">
@@ -56,7 +56,7 @@
               /><br />
               <!--<label for="interview-date"> Interview Date </label>-->
               <input
-                type="text"
+                type="datetime-local"
                 id="interview-date"
                 placeholder="Interview Date"
               /><br />
@@ -71,6 +71,22 @@
           </div>
         </div>
         <br />
+        <button id="edit-btn">Edit Your Profile</button>
+        <div id="userModal" class="modal">
+          <div class="modal-content">
+            <span class="close">&times;</span>
+            <h4>Update your Info Here</h4>
+            <form id="edit-user-form">
+              <input
+                type="text"
+                id="user-name-change"
+                placeholder="Name"
+              /><br />
+              <input type="text" id="user-status-change" placeholder="Status" /><br />
+              <br />
+              <input type="submit" placeholder="Submit" />
+            </form>
+          </div>
       </div>
       <!-- Add our HTML -->
 
