--- a/job-finder-frontend/index.html
+++ b/job-finder-frontend/index.html
@@ -15,6 +15,8 @@
     <header></header>
 
     <main>
+      <!-- <div class="row">
+        <div class="column"> -->
       <div class="page-banner">
         <img
           class="flatiron-logo"
