--- a/job-finder-frontend/index.html
+++ b/job-finder-frontend/index.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
     />
     <script defer src="./src/index.js"></script>
-    <script defer src="./src/user.js"></script>
+    <script defer src="./src/justincase.js"></script>
   </head>
   <body>
     <header></header>
@@ -23,8 +23,10 @@
               src="https://upload.wikimedia.org/wikipedia/commons/6/61/FS_wiki.png"
             />
             <h2>Job Search Tracker</h2>
-            <h3 id="username">Hello</h3>
-            <h4 id="status">Status</h4>
+            <div class="log-in-options"></div>
+
+            <h3 id="username"></h3>
+            <h4 id="status"></h4>
             <button id="application-btn">New Job Application</button>
             <div id="myModal" class="modal">
               <div class="modal-content">
