got modals to work

--- a/job-finder-frontend/index.html
+++ b/job-finder-frontend/index.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
     />
     <script defer src="./src/index.js"></script>
-    <script defer src="./src/justincase.js"></script>
+    <script defer src="./src/user.js"></script>
   </head>
   <body>
     <header></header>
@@ -27,7 +27,7 @@
 
             <h3 id="username"></h3>
             <h4 id="status"></h4>
-            <button id="application-btn">New Job Application</button>
+            <!-- <button id="application-btn">New Job Application</button> -->
             <div id="myModal" class="modal">
               <div class="modal-content">
                 <span class="close">&times;</span>
@@ -67,8 +67,8 @@
                 </form>
               </div>
             </div>
-            <br /><br />
-            <button id="edit-btn">Edit Your Profile</button>
+            <!-- <br /><br /> -->
+            <!-- <button id="edit-btn">Edit Your Profile</button> -->
             <br />
             <div id="userModal" class="modal">
               <div class="modal-content">
@@ -89,7 +89,6 @@
                   <input type="submit" placeholder="Submit" />
                 </form>
               </div>
-              <br />
             </div>
           </div>
         </div>
@@ -100,7 +99,7 @@
               <tr class="header-row">
                 <th>Job Title</th>
                 <th>Company</th>
-                <th>Application Link</th>
+                <!-- <th>Application Link</th> -->
                 <th>Applied?</th>
                 <th>Person Of Contact</th>
                 <th>Interview Date</th>
